tests/baselines/reference/isolatedModulesOut.errors.txt
error TS5053: Option 'out' cannot be specified with option 'isolatedModules'.
error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'outFile' instead.
tests/cases/compiler/file1.ts(1,1): error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.


!!! error TS5053: Option 'out' cannot be specified with option 'isolatedModules'.
!!! error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'outFile' instead.
==== tests/cases/compiler/file1.ts (1 errors) ====
    export var x;
    ~~~~~~~~~~~~~
!!! error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.
==== tests/cases/compiler/file2.ts (0 errors) ====
    var y;